# tinytasktree

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  tinytasktree.py
examples/: agentic_chat_toolcall.py  assert_example.py  cacher_llm.py  cacher_with_validator.py  complex_tree_example.py  decorator_force_return_invert.py  gather_llm_calls.py  if_else_example.py  llm_call_kwargs_example.py  log_llm_example.py  parallel_llm_calls.py  parse_json_llm.py  parse_json_with_json_repair.py  random_selector_llm_models.py  redis_cacher_llm.py  redis_cacher_with_validator.py  retry_llm_example.py  selector_llm_fallback.py  simple_llm_call.py  subtree_example.py  terminable_llm_streaming.py  timeout_decorator_example.py  tool_call_assistant.py  tool_call_example.py  while_topic_tree.py  wrapper_llm_example.py
tests/: conftest.py  test_assert.py  test_basic.py  test_builder_customization.py  test_cacher.py  test_decorators_force_return_invert.py  test_function.py  test_gather.py  test_httpserver.py  test_if_else.py  test_llm.py  test_llm_stream_callbacks.py  test_llm_tool_call.py  test_log.py  test_parallel_build.py  test_parallel_llm.py  test_parse_json.py  test_random_selector.py  test_redis_cacher.py  test_retry.py  test_selector.py  test_sequence.py  test_spawned_task_finish_hook.py  test_subtree.py  test_terminable.py  test_timeout.py  test_timeout_build.py  test_trace_storage.py  test_utils.py  test_while.py  test_while_max_loop.py  test_wrapper.py  test_write_blackboard.py
tinytasktree/: __init__.py  __main__.py
ui/: index.html  package-lock.json  (+2 more)
(+4 files in other folders)
