[project]
name = "tinytasktree"
version = "0.1.0"
description = "Async task orchestrator for Python, inspired by Behavior Trees."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "orjson>=3.11.5",
    "json-repair>=0.55.0",
    "litellm>=1.81.0",
    "redis>=7.1.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.29.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 119
