[project]
name = "tinytasktree"
version = "0.1.4"
description = "A tiny async task-tree orchestrator for Python, behavior-tree inspired and LLM-ready."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "openai>=1.0.0",
]

[project.urls]
Repository = "https://github.com/orion-arm-ai/tinytasktree"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tinytasktree"]
include-package-data = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 119
